# PrivacyLayer

./: .gitignore  CONTRIBUTING.md  FOUNDATION.md  INSTALL_NARGO.md  README.md  ROADMAP.md
contracts/: Cargo.toml
contracts/privacy_pool/: Cargo.toml
contracts/privacy_pool/src/: contract.rs  integration_test.rs  lib.rs  test.rs
contracts/privacy_pool/src/core/: admin.rs  deposit.rs  initialize.rs  mod.rs  view.rs  withdraw.rs
contracts/privacy_pool/src/crypto/: merkle.rs  mod.rs  verifier.rs
contracts/privacy_pool/src/storage/: config.rs  mod.rs  nullifier.rs
contracts/privacy_pool/src/types/: errors.rs  events.rs  mod.rs  state.rs
contracts/privacy_pool/src/utils/: address_decoder.rs  mod.rs  validation.rs
contracts/privacy_pool/test_snapshots/integration_test/: test_e2e_concurrent_depositors_independent_notes.1.json  test_e2e_deposit_updates_balances.1.json  test_e2e_double_spend_rejected.1.json  test_e2e_merkle_insert_deterministic.1.json  test_e2e_multiple_deposits_sequential_indices.1.json  test_e2e_non_admin_rejected_for_all_admin_ops.1.json  test_e2e_pause_blocks_deposit_and_withdraw.1.json  test_e2e_stale_root_evicted_after_overflow.1.json  test_e2e_unknown_root_rejected.1.json  test_e2e_view_functions_track_state.1.json  test_e2e_vk_update_succeeds.1.json  test_e2e_zero_commitment_always_rejected.1.json
contracts/privacy_pool/test_snapshots/test/: test_admin_can_set_vk.1.json  test_deposit_each_produces_unique_root.1.json  test_deposit_increments_leaf_indices.1.json  test_deposit_roots_are_known_after_insert.1.json  test_initialize_succeeds.1.json  (+9 more)
(+28 files in other folders)
