[workspace]
members = ["privacy_pool"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "25.3.0" }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
