[package]
name = "privacy_pool"
version = "0.1.0"
edition = "2021"
description = "PrivacyLayer: ZK shielded pool on Stellar Soroban (Protocol 25)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-poseidon = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level    = "z"
overflow-checks = true
debug        = 0
strip        = "symbols"
debug-assertions = false
panic        = "abort"
codegen-units = 1
lto          = true
